--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "node-sass": "^3.10.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-lite": "^0.15.26",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "redux": "^3.6.0",
